# aws-rust-lambda-extension-kinesis-example

./: Cargo.toml  readme.md
src/: main.rs
