[package]
name = "rust-logs-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda-extension="0.10.0"
tokio = { version = "1.17.0", features = [ "full" ] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-kinesis = "1.15.0"
